test/asm/rs-overwrite.err
error: Built-in symbol '_RS' cannot be purged
    at rs-overwrite.asm(1)
error: '_RS' already defined
    at rs-overwrite.asm(4)
    and also:
    at <builtin>
error: '_RS' already defined
    at rs-overwrite.asm(10)
    and also:
    at rs-overwrite.asm(7)
error: '_RS' already defined as non-EQU
    at rs-overwrite.asm(16)
    and also:
    at rs-overwrite.asm(13)
error: '_RS' already defined as non-EQUS
    at rs-overwrite.asm(19)
    and also:
    at rs-overwrite.asm(13)
Assembly aborted with 5 errors!
